src/test/resources/semantic/reject/subtractInvalidTypesPrimitive3.ul
void main() {
}

float foo() {
    return 7 - 6.5;
}
